--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page - Clowney's Search Engine</title>
+    <title>Big Bucks</title>
     <style>
         /* Basic reset */
         * {
@@ -71,7 +71,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <h1>Welcome to Clowney's Search Engine</h1>
+        <h1>Welcome to Big Bucks</h1>
     </header>
 
     <!-- Navigation Bar -->
@@ -84,14 +84,14 @@
 
     <!-- Main Content -->
     <main>
-        <h2>About Our Search Engine</h2>
-        <p>Welcome to Clowney's Search Engine! Here, you can find anything you need in a fast, reliable, and easy-to-use platform. Whether you're looking for answers, services, or just browsing, we're here to help.</p>
-        <p>Our search engine is designed with simplicity and efficiency in mind. Start exploring today and discover the possibilities!</p>
+        <h2>About Big Bucks</h2>
+        <p>Welcome to Big Bucks! Here, you can find valuable resources, services, and solutions for all your needs. Whether you're looking for financial advice, business insights, or just exploring, Big Bucks is here to empower you.</p>
+        <p>Our platform is designed with simplicity and efficiency in mind. Start exploring today and make the most of Big Bucks!</p>
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Clowney's Search Engine. All Rights Reserved.</p>
+        <p>&copy; 2024 Big Bucks. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
