--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Bucks</title>
+    <title>Home Page - Big Bucks</title>
     <style>
         /* Basic reset */
         * {
@@ -28,34 +28,6 @@
             text-align: center;
         }
 
-        /* Navigation styling */
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #333;
-            padding: 0.5rem;
-        }
-
-        nav a {
-            color: #fff;
-            padding: 0.5rem 1rem;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            background: #4CAF50;
-        }
-
-        /* Main content styling */
-        main {
-            padding: 2rem;
-            max-width: 800px;
-            margin: 2rem auto;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
         /* Footer styling */
         footer {
             background: #333;
@@ -73,21 +45,6 @@
     <header>
         <h1>Welcome to Big Bucks</h1>
     </header>
-
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
-    </nav>
-
-    <!-- Main Content -->
-    <main>
-        <h2>About Big Bucks</h2>
-        <p>Welcome to Big Bucks! Here, you can find valuable resources, services, and solutions for all your needs. Whether you're looking for financial advice, business insights, or just exploring, Big Bucks is here to empower you.</p>
-        <p>Our platform is designed with simplicity and efficiency in mind. Start exploring today and make the most of Big Bucks!</p>
-    </main>
 
     <!-- Footer -->
     <footer>
