--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
             box-sizing: border-box;
         }
 
-        /* Body styling */
+        /* Body styling with camouflage background */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
             color: #333;
             line-height: 1.6;
+            background-image: url('https://www.transparenttextures.com/patterns/camo.png');
+            background-size: cover;
+            background-repeat: repeat;
         }
 
         /* Header styling */
         header {
-            background-color: #4CAF50;
+            background-color: rgba(76, 175, 80, 0.9); /* Semi-transparent green */
             color: #fff;
             padding: 1rem;
             text-align: center;
@@ -30,7 +32,7 @@
 
         /* Footer styling */
         footer {
-            background: #333;
+            background: rgba(51, 51, 51, 0.9); /* Semi-transparent dark color */
             color: #fff;
             text-align: center;
             padding: 1rem;
