--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: Arial, sans-serif;
             color: #333;
             line-height: 1.6;
-            background-image: url('https://www.transparenttextures.com/patterns/camo.png');
+            background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3Dold%2Bcamo%2Bpatterns&psig=AOvVaw25ax2M2BwOXGylFkZXf7yd&ust=1730687137048000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOjatZGOv4kDFQAAAAAdAAAAABAJ');
             background-size: cover;
             background-repeat: repeat;
         }
