--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
             box-sizing: border-box;
         }
 
-        /* Body styling with camouflage background */
+        /* Body styling with camouflage pattern */
         body {
             font-family: Arial, sans-serif;
             color: #333;
             line-height: 1.6;
-            background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3Dold%2Bcamo%2Bpatterns&psig=AOvVaw25ax2M2BwOXGylFkZXf7yd&ust=1730687137048000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOjatZGOv4kDFQAAAAAdAAAAABAJ.png');
-            background-size: cover;
-            background-repeat: repeat;
+            background-color: #6b8e23; /* Base green */
+            background-image:
+                radial-gradient(circle, rgba(75, 83, 32, 0.8) 20%, transparent 20%),
+                radial-gradient(circle, rgba(101, 115, 39, 0.8) 20%, transparent 20%),
+                radial-gradient(circle, rgba(88, 98, 36, 0.8) 20%, transparent 20%),
+                radial-gradient(circle, rgba(125, 144, 53, 0.8) 20%, transparent 20%),
+                radial-gradient(circle, rgba(47, 56, 20, 0.8) 20%, transparent 20%);
+            background-size: 150px 150px;
+            background-blend-mode: multiply;
         }
 
         /* Header styling */
