--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
             color: #333;
             line-height: 1.6;
             background-color: #6b8e23; /* Base green */
-            background-image:
-                radial-gradient(circle, rgba(75, 83, 32, 0.8) 20%, transparent 20%),
-                radial-gradient(circle, rgba(101, 115, 39, 0.8) 20%, transparent 20%),
-                radial-gradient(circle, rgba(88, 98, 36, 0.8) 20%, transparent 20%),
-                radial-gradient(circle, rgba(125, 144, 53, 0.8) 20%, transparent 20%),
-                radial-gradient(circle, rgba(47, 56, 20, 0.8) 20%, transparent 20%);
-            background-size: 150px 150px;
+            background-image: 
+                /* Irregular greenish shapes */
+                polygon(60% 0%, 70% 10%, 50% 20%, 40% 10%, 50% 30%, 40% 20%),
+                polygon(30% 30%, 40% 40%, 20% 50%, 10% 40%, 20% 60%, 10% 50%),
+                /* Olive green shapes */
+                polygon(20% 80%, 30% 90%, 10% 100%, 0% 90%, 10% 100%, 0% 80%),
+                /* Darker greenish-brown shapes */
+                polygon(80% 60%, 90% 70%, 70% 80%, 60% 70%, 70% 90%, 60% 80%);
+            background-size: 300px 300px;
             background-blend-mode: multiply;
         }
 
