--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
             line-height: 1.6;
             background-color: #6b8e23; /* Base green */
             background-image: 
-                /* Irregular greenish shapes */
-                polygon(60% 0%, 70% 10%, 50% 20%, 40% 10%, 50% 30%, 40% 20%),
-                polygon(30% 30%, 40% 40%, 20% 50%, 10% 40%, 20% 60%, 10% 50%),
-                /* Olive green shapes */
-                polygon(20% 80%, 30% 90%, 10% 100%, 0% 90%, 10% 100%, 0% 80%),
-                /* Darker greenish-brown shapes */
-                polygon(80% 60%, 90% 70%, 70% 80%, 60% 70%, 70% 90%, 60% 80%);
-            background-size: 300px 300px;
+                linear-gradient(135deg, #4d5d2e 25%, transparent 25%, transparent 75%, #4d5d2e 75%, #4d5d2e),
+                linear-gradient(225deg, #4d5d2e 25%, transparent 25%, transparent 75%, #4d5d2e 75%, #4d5d2e),
+                linear-gradient(135deg, #7c8b3a 25%, transparent 25%, transparent 75%, #7c8b3a 75%, #7c8b3a),
+                linear-gradient(225deg, #7c8b3a 25%, transparent 25%, transparent 75%, #7c8b3a 75%, #7c8b3a);
+            background-size: 100px 100px;
             background-blend-mode: multiply;
         }
 
