--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
             box-sizing: border-box;
         }
 
-        /* Body styling with camouflage pattern */
+        /* Body styling with complex camouflage pattern */
         body {
             font-family: Arial, sans-serif;
             color: #333;
             line-height: 1.6;
             background-color: #6b8e23; /* Base green */
             background-image: 
-                linear-gradient(135deg, #4d5d2e 25%, transparent 25%, transparent 75%, #4d5d2e 75%, #4d5d2e),
-                linear-gradient(225deg, #4d5d2e 25%, transparent 25%, transparent 75%, #4d5d2e 75%, #4d5d2e),
-                linear-gradient(135deg, #7c8b3a 25%, transparent 25%, transparent 75%, #7c8b3a 75%, #7c8b3a),
-                linear-gradient(225deg, #7c8b3a 25%, transparent 25%, transparent 75%, #7c8b3a 75%, #7c8b3a);
-            background-size: 100px 100px;
+                radial-gradient(circle at 20% 30%, rgba(50, 85, 20, 0.8) 20%, transparent 20%),
+                radial-gradient(circle at 80% 70%, rgba(100, 130, 50, 0.8) 25%, transparent 25%),
+                radial-gradient(circle at 30% 80%, rgba(70, 100, 30, 0.7) 20%, transparent 20%),
+                radial-gradient(circle at 60% 40%, rgba(90, 110, 40, 0.6) 25%, transparent 25%),
+                radial-gradient(circle at 50% 50%, rgba(60, 90, 30, 0.7) 30%, transparent 30%),
+                radial-gradient(circle at 10% 60%, rgba(120, 150, 60, 0.6) 30%, transparent 30%),
+                radial-gradient(circle at 90% 20%, rgba(80, 110, 40, 0.5) 30%, transparent 30%);
+            background-size: 300px 300px;
             background-blend-mode: multiply;
         }
 
