--- a/index.html
+++ b/index.html
@@ -12,30 +12,60 @@
             box-sizing: border-box;
         }
 
-        /* Body styling with complex camouflage pattern */
+        /* Body styling with camouflage pattern */
         body {
             font-family: Arial, sans-serif;
             color: #333;
             line-height: 1.6;
             background-color: #6b8e23; /* Base green */
             background-image: 
-                radial-gradient(circle at 20% 30%, rgba(50, 85, 20, 0.8) 20%, transparent 20%),
-                radial-gradient(circle at 80% 70%, rgba(100, 130, 50, 0.8) 25%, transparent 25%),
-                radial-gradient(circle at 30% 80%, rgba(70, 100, 30, 0.7) 20%, transparent 20%),
-                radial-gradient(circle at 60% 40%, rgba(90, 110, 40, 0.6) 25%, transparent 25%),
-                radial-gradient(circle at 50% 50%, rgba(60, 90, 30, 0.7) 30%, transparent 30%),
-                radial-gradient(circle at 10% 60%, rgba(120, 150, 60, 0.6) 30%, transparent 30%),
-                radial-gradient(circle at 90% 20%, rgba(80, 110, 40, 0.5) 30%, transparent 30%);
-            background-size: 300px 300px;
+                linear-gradient(135deg, #4d5d2e 25%, transparent 25%, transparent 75%, #4d5d2e 75%, #4d5d2e),
+                linear-gradient(225deg, #4d5d2e 25%, transparent 25%, transparent 75%, #4d5d2e 75%, #4d5d2e),
+                linear-gradient(135deg, #7c8b3a 25%, transparent 25%, transparent 75%, #7c8b3a 75%, #7c8b3a),
+                linear-gradient(225deg, #7c8b3a 25%, transparent 25%, transparent 75%, #7c8b3a 75%, #7c8b3a);
+            background-size: 100px 100px;
             background-blend-mode: multiply;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
-        /* Header styling */
-        header {
-            background-color: rgba(76, 175, 80, 0.9); /* Semi-transparent green */
-            color: #fff;
-            padding: 1rem;
+        /* Sign-in form styling */
+        .sign-in-container {
+            background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+            width: 300px; /* Fixed width for the form */
             text-align: center;
+        }
+
+        .sign-in-container h2 {
+            margin-bottom: 1rem;
+        }
+
+        .sign-in-container input {
+            width: 100%;
+            padding: 0.5rem;
+            margin: 0.5rem 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .sign-in-container button {
+            background-color: #4CAF50; /* Green */
+            color: white;
+            padding: 0.5rem;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+            margin-top: 1rem;
+        }
+
+        .sign-in-container button:hover {
+            background-color: #45a049; /* Darker green on hover */
         }
 
         /* Footer styling */
@@ -51,10 +81,15 @@
     </style>
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <h1>Welcome to Big Bucks</h1>
-    </header>
+    <!-- Sign-in form -->
+    <div class="sign-in-container">
+        <h2>Sign In</h2>
+        <form>
+            <input type="text" placeholder="Username" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Sign In</button>
+        </form>
+    </div>
 
     <!-- Footer -->
     <footer>
