--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
     <!-- Sign-in form -->
     <div class="sign-in-container">
-        <h2>Sign In</h2>
+        <h2>Code is bigbucks</h2> <!-- Updated heading -->
         <form id="signInForm">
             <input type="text" id="codeInput" placeholder="Enter Code" required>
             <button type="submit">Sign In</button>
