--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
             background-color: #45a049; /* Darker green on hover */
         }
 
+        /* List item styling for log entries */
+        #logList li {
+            list-style-type: none; /* Remove default list styles */
+            margin: 0.5rem 0; /* Space between entries */
+            text-align: left; /* Align text to the left */
+            white-space: normal; /* Allow wrapping */
+        }
+
         /* Footer styling */
         footer {
             background: rgba(51, 51, 51, 0.9); /* Semi-transparent dark color */
