--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             margin-top: 1rem;
             border: 1px solid #ccc;
             border-radius: 5px;
-            overflow-y: auto; /* Allow vertical scroll */
+            overflow-y: hidden; /* Disable vertical scrolling */
             resize: none; /* Disable resizing */
         }
 
@@ -77,8 +77,6 @@
             padding: 0; /* Remove default padding */
             list-style-type: none; /* Remove default list styles */
             text-align: left; /* Align text to the left */
-            max-height: 200px; /* Set a maximum height */
-            overflow-y: auto; /* Enable scrolling if it exceeds max-height */
         }
 
         #logList li {
@@ -88,6 +86,7 @@
             display: flex; /* Use flexbox to align items */
             justify-content: space-between; /* Space between text and trash icon */
             align-items: center; /* Center items vertically */
+            max-width: 100%; /* Prevent overflowing */
         }
 
         /* Footer styling */
